--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,17 +1,10 @@
 <div class="row">
   <div class="col-xs-10">
-    <app-shopping-edit
-      (ingredientAdded)="onIngredientAdded($event)"
-    ></app-shopping-edit>
+    <app-shopping-edit></app-shopping-edit>
     <hr />
     <ul class="list-group list-unstyled">
-      <li
-        *ngFor="let ingredient of ingredients">
-        <a
-          href="#"
-          class="list-group-item"
-          style="cursor: pointer"
-        >
+      <li *ngFor="let ingredient of ingredients">
+        <a href="#" class="list-group-item" style="cursor: pointer">
           {{ ingredient.name }} ({{ ingredient.amount }})
         </a>
       </li>
