--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -3,8 +3,8 @@
     <app-shopping-edit></app-shopping-edit>
     <hr />
     <ul class="list-group list-unstyled">
-      <li *ngFor="let ingredient of ingredients">
-        <a href="#" class="list-group-item" style="cursor: pointer">
+      <li *ngFor="let ingredient of ingredients; let i = index">
+        <a class="list-group-item" style="cursor: pointer" (click)="onEditItem(i)">
           {{ ingredient.name }} ({{ ingredient.amount }})
         </a>
       </li>
